# WinSelector

./: .gitignore  AGENT.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.ja.md  README.md  Specifications.txt  main.cpp  skills-lock.json
.claude/: settings.local.json
cmake/: QtSbomLink.cmake
dcos/specs/: 00-metadata.md  01-overview.md  02-architecture.md  03-screens-interaction.md  04-features.md  05-win32-integration.md  06-settings-persistence.md  07-build-distribution.md  08-constraints-unresolved.md  99-unresolved.md  README.md  traceability.md
openspec/changes/archive/2026-03-06-periodic-icon-refresh/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-06-periodic-icon-refresh/specs/icon-cache-invalidation/: spec.md
openspec/changes/archive/2026-03-07-fix-missing-tiles-in-multi-column-layout/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-07-fix-missing-tiles-in-multi-column-layout/specs/multi-column-tile-layout/: spec.md
openspec/specs/multi-column-tile-layout/: spec.md
src/: config.h  flowlayout.cpp  flowlayout.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  win32utils.cpp  win32utils.h  windowscanner.cpp  windowscanner.h  windowtile.cpp  windowtile.h
